deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: t
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: level1strip
spec:
  stripPrefixRegex:
    regex:
      - "/api/[^/]+"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apimyingress
  labels:
    name: apimyingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-level1strip@kubernetescrd
spec:
  rules:
  - http:
        paths:
        - path: /api/systemmanagement
          pathType: Prefix
          backend:
            service:
              name: myapp
              port:
                number: 8080
        - path: /api/runtime
          pathType: Prefix
          backend:
            service:
              name: myapp
              port:
                number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: myapp
              port:
                number: 8080
